sg.tf
resource "aws_security_group" "bastion_secgroup" {
  name        = "Bastion_SSH_port_opened"
  description = "SSH port opened"

  vpc_id = aws_vpc.bastion_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "SSH_security_group"
  }
}
